--- a/code/src/package.json
+++ b/code/src/package.json
@@ -1,8 +1,8 @@
 {
   "name": "baseline",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Baseline code for future web projects",
+  "main": ".eleventy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
