--- a/code/src/package.json
+++ b/code/src/package.json
@@ -4,7 +4,7 @@
   "description": "Baseline code for future web projects",
   "main": ".eleventy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx eleventy --serve"
   },
   "keywords": [],
   "author": "",
